feat: changed js and done some style adjust

--- a/index.html
+++ b/index.html
@@ -9,35 +9,7 @@
     <title>Carousel</title>
 </head>
 <body>
-    <div class="wrapper">
-        <!-- SLIDER -->
-        <div class="slider-container">
-          <!-- SLIDES -->
-          <div id="slides-container" class="slides-container">
-            <div class="slide active">
-              <img src="img/01.webp" />
-            </div>
-            <div class="slide">
-              <img src="img/02.webp" />
-            </div>
-            <div class="slide">
-              <img src="img/03.webp" />
-            </div>
-            <div class="slide">
-              <img src="img/04.webp" />
-            </div>
-            <div class="slide">
-              <img src="img/05.webp" />
-            </div>
-          </div>
-          <!-- CONTROLS -->
-          <div id="prev" class="controls arrow-left">
-            <i class="fa-solid fa-chevron-left fa-4x"></i>
-          </div>
-          <div id="next" class="controls arrow-right">
-            <i class="fa-solid fa-chevron-right fa-4x"></i>
-          </div>
-        </div>
+    <div class="container">
     </div>
 <script src="js/script.js"></script>
 </body>
